# jbig2enc

./: Makefile  Makefile.am  Makefile.in  README  configure  configure.ac  jbig2.cc  jbig2enc.cc  jbig2sym.cc  pdf.py
